// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultList snapshot tests should compare against the snapshot given 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <ul
    className="root"
>
    <li
        style={
            Object {
                "marginTop": 84,
              }
        }
    >
        <time
            className="timestamp"
            dateTime={2014-03-19T19:29:30.036Z}
            style={
                Object {
                    "fontSize": 16,
                    "height": 16,
                  }
            }
        >
            20 March 2014
        </time>
        <VisitAsListItem
            compact={undefined}
            doc={
                Object {
                    "_id": "visit/1495257370036/0880990681",
                    "_rev": "1-52d1ea2a7459c12398b596278859daf5",
                    "page": Object {
                      "_attachments": Object {
                        "favIcon": Object {
                          "content_type": "image/x-icon",
                          "digest": "md5-80GKRD59hBCXxxTWnsS8uA==",
                          "length": 5430,
                          "revpos": 2,
                          "stub": true,
                        },
                      },
                      "_id": "page/1495257370804/5585936238",
                      "_rev": "2-be55358da9b50f754838c64f37791c8d",
                      "title": "https://www.google.co.in/",
                      "url": "https://www.google.co.in/",
                    },
                    "url": "https://www.google.co.in/",
                    "visitStart": 1395257370036,
                  }
            }
        />
    </li>
    <li
        style={
            Object {
                "marginTop": 0,
              }
        }
    >
        <VisitAsListItem
            compact={undefined}
            doc={
                Object {
                    "_id": "visit/1495257370036/0880990681",
                    "_rev": "1-52d1ea2a7459c12398b596278859daf5",
                    "page": Object {
                      "_attachments": Object {
                        "favIcon": Object {
                          "content_type": "image/x-icon",
                          "digest": "md5-80GKRD59hBCXxxTWnsS8uA==",
                          "length": 5430,
                          "revpos": 2,
                          "stub": true,
                        },
                      },
                      "_id": "page/1495257370804/5585936238",
                      "_rev": "2-be55358da9b50f754838c64f37791c8d",
                      "title": "https://www.google.co.in/",
                      "url": "https://www.google.co.in/",
                    },
                    "url": "https://www.google.co.in/",
                    "visitStart": 1395257370036,
                  }
            }
        />
    </li>
    <li
        style={
            Object {
                "marginTop": 0,
              }
        }
    >
        <VisitAsListItem
            compact={undefined}
            doc={
                Object {
                    "_id": "visit/1495257370036/0880990681",
                    "_rev": "1-52d1ea2a7459c12398b596278859daf5",
                    "page": Object {
                      "_attachments": Object {
                        "favIcon": Object {
                          "content_type": "image/x-icon",
                          "digest": "md5-80GKRD59hBCXxxTWnsS8uA==",
                          "length": 5430,
                          "revpos": 2,
                          "stub": true,
                        },
                      },
                      "_id": "page/1495257370804/5585936238",
                      "_rev": "2-be55358da9b50f754838c64f37791c8d",
                      "title": "https://www.google.co.in/",
                      "url": "https://www.google.co.in/",
                    },
                    "url": "https://www.google.co.in/",
                    "visitStart": 1395257370036,
                  }
            }
        />
    </li>
</ul>,
  "nodes": Array [
    <ul
      className="root"
>
      <li
            style={
                  Object {
                        "marginTop": 84,
                      }
            }
      >
            <time
                  className="timestamp"
                  dateTime={2014-03-19T19:29:30.036Z}
                  style={
                        Object {
                              "fontSize": 16,
                              "height": 16,
                            }
                  }
            >
                  20 March 2014
            </time>
            <VisitAsListItem
                  compact={undefined}
                  doc={
                        Object {
                              "_id": "visit/1495257370036/0880990681",
                              "_rev": "1-52d1ea2a7459c12398b596278859daf5",
                              "page": Object {
                                "_attachments": Object {
                                  "favIcon": Object {
                                    "content_type": "image/x-icon",
                                    "digest": "md5-80GKRD59hBCXxxTWnsS8uA==",
                                    "length": 5430,
                                    "revpos": 2,
                                    "stub": true,
                                  },
                                },
                                "_id": "page/1495257370804/5585936238",
                                "_rev": "2-be55358da9b50f754838c64f37791c8d",
                                "title": "https://www.google.co.in/",
                                "url": "https://www.google.co.in/",
                              },
                              "url": "https://www.google.co.in/",
                              "visitStart": 1395257370036,
                            }
                  }
            />
      </li>
      <li
            style={
                  Object {
                        "marginTop": 0,
                      }
            }
      >
            <VisitAsListItem
                  compact={undefined}
                  doc={
                        Object {
                              "_id": "visit/1495257370036/0880990681",
                              "_rev": "1-52d1ea2a7459c12398b596278859daf5",
                              "page": Object {
                                "_attachments": Object {
                                  "favIcon": Object {
                                    "content_type": "image/x-icon",
                                    "digest": "md5-80GKRD59hBCXxxTWnsS8uA==",
                                    "length": 5430,
                                    "revpos": 2,
                                    "stub": true,
                                  },
                                },
                                "_id": "page/1495257370804/5585936238",
                                "_rev": "2-be55358da9b50f754838c64f37791c8d",
                                "title": "https://www.google.co.in/",
                                "url": "https://www.google.co.in/",
                              },
                              "url": "https://www.google.co.in/",
                              "visitStart": 1395257370036,
                            }
                  }
            />
      </li>
      <li
            style={
                  Object {
                        "marginTop": 0,
                      }
            }
      >
            <VisitAsListItem
                  compact={undefined}
                  doc={
                        Object {
                              "_id": "visit/1495257370036/0880990681",
                              "_rev": "1-52d1ea2a7459c12398b596278859daf5",
                              "page": Object {
                                "_attachments": Object {
                                  "favIcon": Object {
                                    "content_type": "image/x-icon",
                                    "digest": "md5-80GKRD59hBCXxxTWnsS8uA==",
                                    "length": 5430,
                                    "revpos": 2,
                                    "stub": true,
                                  },
                                },
                                "_id": "page/1495257370804/5585936238",
                                "_rev": "2-be55358da9b50f754838c64f37791c8d",
                                "title": "https://www.google.co.in/",
                                "url": "https://www.google.co.in/",
                              },
                              "url": "https://www.google.co.in/",
                              "visitStart": 1395257370036,
                            }
                  }
            />
      </li>
</ul>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <ResultList
        searchQuery=""
        searchResult={
                Object {
                        "default": Object {
                          "rows": Array [
                            Object {
                              "doc": Object {
                                "_id": "visit/1495257370036/0880990681",
                                "_rev": "1-52d1ea2a7459c12398b596278859daf5",
                                "page": Object {
                                  "_attachments": Object {
                                    "favIcon": Object {
                                      "content_type": "image/x-icon",
                                      "digest": "md5-80GKRD59hBCXxxTWnsS8uA==",
                                      "length": 5430,
                                      "revpos": 2,
                                      "stub": true,
                                    },
                                  },
                                  "_id": "page/1495257370804/5585936238",
                                  "_rev": "2-be55358da9b50f754838c64f37791c8d",
                                  "title": "https://www.google.co.in/",
                                  "url": "https://www.google.co.in/",
                                },
                                "url": "https://www.google.co.in/",
                                "visitStart": 1395257370036,
                              },
                              "id": "visit/1495257370036/0880990681",
                              "key": "visit/1495257370036/0880990681",
                              "value": Object {
                                "rev": "1-52d1ea2a7459c12398b596278859daf5",
                              },
                            },
                            Object {
                              "doc": Object {
                                "_id": "visit/1495257370036/0880990681",
                                "_rev": "1-52d1ea2a7459c12398b596278859daf5",
                                "page": Object {
                                  "_attachments": Object {
                                    "favIcon": Object {
                                      "content_type": "image/x-icon",
                                      "digest": "md5-80GKRD59hBCXxxTWnsS8uA==",
                                      "length": 5430,
                                      "revpos": 2,
                                      "stub": true,
                                    },
                                  },
                                  "_id": "page/1495257370804/5585936238",
                                  "_rev": "2-be55358da9b50f754838c64f37791c8d",
                                  "title": "https://www.google.co.in/",
                                  "url": "https://www.google.co.in/",
                                },
                                "url": "https://www.google.co.in/",
                                "visitStart": 1395257370036,
                              },
                              "id": "visit/1495257370036/0880990681",
                              "key": "visit/1495257370036/0880990681",
                              "value": Object {
                                "rev": "1-52d1ea2a7459c12398b596278859daf5",
                              },
                            },
                            Object {
                              "doc": Object {
                                "_id": "visit/1495257370036/0880990681",
                                "_rev": "1-52d1ea2a7459c12398b596278859daf5",
                                "page": Object {
                                  "_attachments": Object {
                                    "favIcon": Object {
                                      "content_type": "image/x-icon",
                                      "digest": "md5-80GKRD59hBCXxxTWnsS8uA==",
                                      "length": 5430,
                                      "revpos": 2,
                                      "stub": true,
                                    },
                                  },
                                  "_id": "page/1495257370804/5585936238",
                                  "_rev": "2-be55358da9b50f754838c64f37791c8d",
                                  "title": "https://www.google.co.in/",
                                  "url": "https://www.google.co.in/",
                                },
                                "url": "https://www.google.co.in/",
                                "visitStart": 1395257370036,
                              },
                              "id": "visit/1495257370036/0880990681",
                              "key": "visit/1495257370036/0880990681",
                              "value": Object {
                                "rev": "1-52d1ea2a7459c12398b596278859daf5",
                              },
                            },
                          ],
                        },
                        "rows": Array [
                          Object {
                            "doc": Object {
                              "_id": "visit/1495257370036/0880990681",
                              "_rev": "1-52d1ea2a7459c12398b596278859daf5",
                              "page": Object {
                                "_attachments": Object {
                                  "favIcon": Object {
                                    "content_type": "image/x-icon",
                                    "digest": "md5-80GKRD59hBCXxxTWnsS8uA==",
                                    "length": 5430,
                                    "revpos": 2,
                                    "stub": true,
                                  },
                                },
                                "_id": "page/1495257370804/5585936238",
                                "_rev": "2-be55358da9b50f754838c64f37791c8d",
                                "title": "https://www.google.co.in/",
                                "url": "https://www.google.co.in/",
                              },
                              "url": "https://www.google.co.in/",
                              "visitStart": 1395257370036,
                            },
                            "id": "visit/1495257370036/0880990681",
                            "key": "visit/1495257370036/0880990681",
                            "value": Object {
                              "rev": "1-52d1ea2a7459c12398b596278859daf5",
                            },
                          },
                          Object {
                            "doc": Object {
                              "_id": "visit/1495257370036/0880990681",
                              "_rev": "1-52d1ea2a7459c12398b596278859daf5",
                              "page": Object {
                                "_attachments": Object {
                                  "favIcon": Object {
                                    "content_type": "image/x-icon",
                                    "digest": "md5-80GKRD59hBCXxxTWnsS8uA==",
                                    "length": 5430,
                                    "revpos": 2,
                                    "stub": true,
                                  },
                                },
                                "_id": "page/1495257370804/5585936238",
                                "_rev": "2-be55358da9b50f754838c64f37791c8d",
                                "title": "https://www.google.co.in/",
                                "url": "https://www.google.co.in/",
                              },
                              "url": "https://www.google.co.in/",
                              "visitStart": 1395257370036,
                            },
                            "id": "visit/1495257370036/0880990681",
                            "key": "visit/1495257370036/0880990681",
                            "value": Object {
                              "rev": "1-52d1ea2a7459c12398b596278859daf5",
                            },
                          },
                          Object {
                            "doc": Object {
                              "_id": "visit/1495257370036/0880990681",
                              "_rev": "1-52d1ea2a7459c12398b596278859daf5",
                              "page": Object {
                                "_attachments": Object {
                                  "favIcon": Object {
                                    "content_type": "image/x-icon",
                                    "digest": "md5-80GKRD59hBCXxxTWnsS8uA==",
                                    "length": 5430,
                                    "revpos": 2,
                                    "stub": true,
                                  },
                                },
                                "_id": "page/1495257370804/5585936238",
                                "_rev": "2-be55358da9b50f754838c64f37791c8d",
                                "title": "https://www.google.co.in/",
                                "url": "https://www.google.co.in/",
                              },
                              "url": "https://www.google.co.in/",
                              "visitStart": 1395257370036,
                            },
                            "id": "visit/1495257370036/0880990681",
                            "key": "visit/1495257370036/0880990681",
                            "value": Object {
                              "rev": "1-52d1ea2a7459c12398b596278859daf5",
                            },
                          },
                        ],
                      }
        }
/>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "searchQuery": "",
          "searchResult": Object {
            "default": Object {
              "rows": Array [
                Object {
                  "doc": Object {
                    "_id": "visit/1495257370036/0880990681",
                    "_rev": "1-52d1ea2a7459c12398b596278859daf5",
                    "page": Object {
                      "_attachments": Object {
                        "favIcon": Object {
                          "content_type": "image/x-icon",
                          "digest": "md5-80GKRD59hBCXxxTWnsS8uA==",
                          "length": 5430,
                          "revpos": 2,
                          "stub": true,
                        },
                      },
                      "_id": "page/1495257370804/5585936238",
                      "_rev": "2-be55358da9b50f754838c64f37791c8d",
                      "title": "https://www.google.co.in/",
                      "url": "https://www.google.co.in/",
                    },
                    "url": "https://www.google.co.in/",
                    "visitStart": 1395257370036,
                  },
                  "id": "visit/1495257370036/0880990681",
                  "key": "visit/1495257370036/0880990681",
                  "value": Object {
                    "rev": "1-52d1ea2a7459c12398b596278859daf5",
                  },
                },
                Object {
                  "doc": Object {
                    "_id": "visit/1495257370036/0880990681",
                    "_rev": "1-52d1ea2a7459c12398b596278859daf5",
                    "page": Object {
                      "_attachments": Object {
                        "favIcon": Object {
                          "content_type": "image/x-icon",
                          "digest": "md5-80GKRD59hBCXxxTWnsS8uA==",
                          "length": 5430,
                          "revpos": 2,
                          "stub": true,
                        },
                      },
                      "_id": "page/1495257370804/5585936238",
                      "_rev": "2-be55358da9b50f754838c64f37791c8d",
                      "title": "https://www.google.co.in/",
                      "url": "https://www.google.co.in/",
                    },
                    "url": "https://www.google.co.in/",
                    "visitStart": 1395257370036,
                  },
                  "id": "visit/1495257370036/0880990681",
                  "key": "visit/1495257370036/0880990681",
                  "value": Object {
                    "rev": "1-52d1ea2a7459c12398b596278859daf5",
                  },
                },
                Object {
                  "doc": Object {
                    "_id": "visit/1495257370036/0880990681",
                    "_rev": "1-52d1ea2a7459c12398b596278859daf5",
                    "page": Object {
                      "_attachments": Object {
                        "favIcon": Object {
                          "content_type": "image/x-icon",
                          "digest": "md5-80GKRD59hBCXxxTWnsS8uA==",
                          "length": 5430,
                          "revpos": 2,
                          "stub": true,
                        },
                      },
                      "_id": "page/1495257370804/5585936238",
                      "_rev": "2-be55358da9b50f754838c64f37791c8d",
                      "title": "https://www.google.co.in/",
                      "url": "https://www.google.co.in/",
                    },
                    "url": "https://www.google.co.in/",
                    "visitStart": 1395257370036,
                  },
                  "id": "visit/1495257370036/0880990681",
                  "key": "visit/1495257370036/0880990681",
                  "value": Object {
                    "rev": "1-52d1ea2a7459c12398b596278859daf5",
                  },
                },
              ],
            },
            "rows": Array [
              Object {
                "doc": Object {
                  "_id": "visit/1495257370036/0880990681",
                  "_rev": "1-52d1ea2a7459c12398b596278859daf5",
                  "page": Object {
                    "_attachments": Object {
                      "favIcon": Object {
                        "content_type": "image/x-icon",
                        "digest": "md5-80GKRD59hBCXxxTWnsS8uA==",
                        "length": 5430,
                        "revpos": 2,
                        "stub": true,
                      },
                    },
                    "_id": "page/1495257370804/5585936238",
                    "_rev": "2-be55358da9b50f754838c64f37791c8d",
                    "title": "https://www.google.co.in/",
                    "url": "https://www.google.co.in/",
                  },
                  "url": "https://www.google.co.in/",
                  "visitStart": 1395257370036,
                },
                "id": "visit/1495257370036/0880990681",
                "key": "visit/1495257370036/0880990681",
                "value": Object {
                  "rev": "1-52d1ea2a7459c12398b596278859daf5",
                },
              },
              Object {
                "doc": Object {
                  "_id": "visit/1495257370036/0880990681",
                  "_rev": "1-52d1ea2a7459c12398b596278859daf5",
                  "page": Object {
                    "_attachments": Object {
                      "favIcon": Object {
                        "content_type": "image/x-icon",
                        "digest": "md5-80GKRD59hBCXxxTWnsS8uA==",
                        "length": 5430,
                        "revpos": 2,
                        "stub": true,
                      },
                    },
                    "_id": "page/1495257370804/5585936238",
                    "_rev": "2-be55358da9b50f754838c64f37791c8d",
                    "title": "https://www.google.co.in/",
                    "url": "https://www.google.co.in/",
                  },
                  "url": "https://www.google.co.in/",
                  "visitStart": 1395257370036,
                },
                "id": "visit/1495257370036/0880990681",
                "key": "visit/1495257370036/0880990681",
                "value": Object {
                  "rev": "1-52d1ea2a7459c12398b596278859daf5",
                },
              },
              Object {
                "doc": Object {
                  "_id": "visit/1495257370036/0880990681",
                  "_rev": "1-52d1ea2a7459c12398b596278859daf5",
                  "page": Object {
                    "_attachments": Object {
                      "favIcon": Object {
                        "content_type": "image/x-icon",
                        "digest": "md5-80GKRD59hBCXxxTWnsS8uA==",
                        "length": 5430,
                        "revpos": 2,
                        "stub": true,
                      },
                    },
                    "_id": "page/1495257370804/5585936238",
                    "_rev": "2-be55358da9b50f754838c64f37791c8d",
                    "title": "https://www.google.co.in/",
                    "url": "https://www.google.co.in/",
                  },
                  "url": "https://www.google.co.in/",
                  "visitStart": 1395257370036,
                },
                "id": "visit/1495257370036/0880990681",
                "key": "visit/1495257370036/0880990681",
                "value": Object {
                  "rev": "1-52d1ea2a7459c12398b596278859daf5",
                },
              },
            ],
          },
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <ul
          className="root"
>
          <li
                    style={
                              Object {
                                        "marginTop": 84,
                                      }
                    }
          >
                    <time
                              className="timestamp"
                              dateTime={2014-03-19T19:29:30.036Z}
                              style={
                                        Object {
                                                  "fontSize": 16,
                                                  "height": 16,
                                                }
                              }
                    >
                              20 March 2014
                    </time>
                    <VisitAsListItem
                              compact={undefined}
                              doc={
                                        Object {
                                                  "_id": "visit/1495257370036/0880990681",
                                                  "_rev": "1-52d1ea2a7459c12398b596278859daf5",
                                                  "page": Object {
                                                    "_attachments": Object {
                                                      "favIcon": Object {
                                                        "content_type": "image/x-icon",
                                                        "digest": "md5-80GKRD59hBCXxxTWnsS8uA==",
                                                        "length": 5430,
                                                        "revpos": 2,
                                                        "stub": true,
                                                      },
                                                    },
                                                    "_id": "page/1495257370804/5585936238",
                                                    "_rev": "2-be55358da9b50f754838c64f37791c8d",
                                                    "title": "https://www.google.co.in/",
                                                    "url": "https://www.google.co.in/",
                                                  },
                                                  "url": "https://www.google.co.in/",
                                                  "visitStart": 1395257370036,
                                                }
                              }
                    />
          </li>
          <li
                    style={
                              Object {
                                        "marginTop": 0,
                                      }
                    }
          >
                    <VisitAsListItem
                              compact={undefined}
                              doc={
                                        Object {
                                                  "_id": "visit/1495257370036/0880990681",
                                                  "_rev": "1-52d1ea2a7459c12398b596278859daf5",
                                                  "page": Object {
                                                    "_attachments": Object {
                                                      "favIcon": Object {
                                                        "content_type": "image/x-icon",
                                                        "digest": "md5-80GKRD59hBCXxxTWnsS8uA==",
                                                        "length": 5430,
                                                        "revpos": 2,
                                                        "stub": true,
                                                      },
                                                    },
                                                    "_id": "page/1495257370804/5585936238",
                                                    "_rev": "2-be55358da9b50f754838c64f37791c8d",
                                                    "title": "https://www.google.co.in/",
                                                    "url": "https://www.google.co.in/",
                                                  },
                                                  "url": "https://www.google.co.in/",
                                                  "visitStart": 1395257370036,
                                                }
                              }
                    />
          </li>
          <li
                    style={
                              Object {
                                        "marginTop": 0,
                                      }
                    }
          >
                    <VisitAsListItem
                              compact={undefined}
                              doc={
                                        Object {
                                                  "_id": "visit/1495257370036/0880990681",
                                                  "_rev": "1-52d1ea2a7459c12398b596278859daf5",
                                                  "page": Object {
                                                    "_attachments": Object {
                                                      "favIcon": Object {
                                                        "content_type": "image/x-icon",
                                                        "digest": "md5-80GKRD59hBCXxxTWnsS8uA==",
                                                        "length": 5430,
                                                        "revpos": 2,
                                                        "stub": true,
                                                      },
                                                    },
                                                    "_id": "page/1495257370804/5585936238",
                                                    "_rev": "2-be55358da9b50f754838c64f37791c8d",
                                                    "title": "https://www.google.co.in/",
                                                    "url": "https://www.google.co.in/",
                                                  },
                                                  "url": "https://www.google.co.in/",
                                                  "visitStart": 1395257370036,
                                                }
                              }
                    />
          </li>
</ul>,
        "_debugID": 2,
        "_renderedOutput": <ul
          className="root"
>
          <li
                    style={
                              Object {
                                        "marginTop": 84,
                                      }
                    }
          >
                    <time
                              className="timestamp"
                              dateTime={2014-03-19T19:29:30.036Z}
                              style={
                                        Object {
                                                  "fontSize": 16,
                                                  "height": 16,
                                                }
                              }
                    >
                              20 March 2014
                    </time>
                    <VisitAsListItem
                              compact={undefined}
                              doc={
                                        Object {
                                                  "_id": "visit/1495257370036/0880990681",
                                                  "_rev": "1-52d1ea2a7459c12398b596278859daf5",
                                                  "page": Object {
                                                    "_attachments": Object {
                                                      "favIcon": Object {
                                                        "content_type": "image/x-icon",
                                                        "digest": "md5-80GKRD59hBCXxxTWnsS8uA==",
                                                        "length": 5430,
                                                        "revpos": 2,
                                                        "stub": true,
                                                      },
                                                    },
                                                    "_id": "page/1495257370804/5585936238",
                                                    "_rev": "2-be55358da9b50f754838c64f37791c8d",
                                                    "title": "https://www.google.co.in/",
                                                    "url": "https://www.google.co.in/",
                                                  },
                                                  "url": "https://www.google.co.in/",
                                                  "visitStart": 1395257370036,
                                                }
                              }
                    />
          </li>
          <li
                    style={
                              Object {
                                        "marginTop": 0,
                                      }
                    }
          >
                    <VisitAsListItem
                              compact={undefined}
                              doc={
                                        Object {
                                                  "_id": "visit/1495257370036/0880990681",
                                                  "_rev": "1-52d1ea2a7459c12398b596278859daf5",
                                                  "page": Object {
                                                    "_attachments": Object {
                                                      "favIcon": Object {
                                                        "content_type": "image/x-icon",
                                                        "digest": "md5-80GKRD59hBCXxxTWnsS8uA==",
                                                        "length": 5430,
                                                        "revpos": 2,
                                                        "stub": true,
                                                      },
                                                    },
                                                    "_id": "page/1495257370804/5585936238",
                                                    "_rev": "2-be55358da9b50f754838c64f37791c8d",
                                                    "title": "https://www.google.co.in/",
                                                    "url": "https://www.google.co.in/",
                                                  },
                                                  "url": "https://www.google.co.in/",
                                                  "visitStart": 1395257370036,
                                                }
                              }
                    />
          </li>
          <li
                    style={
                              Object {
                                        "marginTop": 0,
                                      }
                    }
          >
                    <VisitAsListItem
                              compact={undefined}
                              doc={
                                        Object {
                                                  "_id": "visit/1495257370036/0880990681",
                                                  "_rev": "1-52d1ea2a7459c12398b596278859daf5",
                                                  "page": Object {
                                                    "_attachments": Object {
                                                      "favIcon": Object {
                                                        "content_type": "image/x-icon",
                                                        "digest": "md5-80GKRD59hBCXxxTWnsS8uA==",
                                                        "length": 5430,
                                                        "revpos": 2,
                                                        "stub": true,
                                                      },
                                                    },
                                                    "_id": "page/1495257370804/5585936238",
                                                    "_rev": "2-be55358da9b50f754838c64f37791c8d",
                                                    "title": "https://www.google.co.in/",
                                                    "url": "https://www.google.co.in/",
                                                  },
                                                  "url": "https://www.google.co.in/",
                                                  "visitStart": 1395257370036,
                                                }
                              }
                    />
          </li>
</ul>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <ResultList
    searchQuery=""
    searchResult={
        Object {
            "default": Object {
              "rows": Array [
                Object {
                  "doc": Object {
                    "_id": "visit/1495257370036/0880990681",
                    "_rev": "1-52d1ea2a7459c12398b596278859daf5",
                    "page": Object {
                      "_attachments": Object {
                        "favIcon": Object {
                          "content_type": "image/x-icon",
                          "digest": "md5-80GKRD59hBCXxxTWnsS8uA==",
                          "length": 5430,
                          "revpos": 2,
                          "stub": true,
                        },
                      },
                      "_id": "page/1495257370804/5585936238",
                      "_rev": "2-be55358da9b50f754838c64f37791c8d",
                      "title": "https://www.google.co.in/",
                      "url": "https://www.google.co.in/",
                    },
                    "url": "https://www.google.co.in/",
                    "visitStart": 1395257370036,
                  },
                  "id": "visit/1495257370036/0880990681",
                  "key": "visit/1495257370036/0880990681",
                  "value": Object {
                    "rev": "1-52d1ea2a7459c12398b596278859daf5",
                  },
                },
                Object {
                  "doc": Object {
                    "_id": "visit/1495257370036/0880990681",
                    "_rev": "1-52d1ea2a7459c12398b596278859daf5",
                    "page": Object {
                      "_attachments": Object {
                        "favIcon": Object {
                          "content_type": "image/x-icon",
                          "digest": "md5-80GKRD59hBCXxxTWnsS8uA==",
                          "length": 5430,
                          "revpos": 2,
                          "stub": true,
                        },
                      },
                      "_id": "page/1495257370804/5585936238",
                      "_rev": "2-be55358da9b50f754838c64f37791c8d",
                      "title": "https://www.google.co.in/",
                      "url": "https://www.google.co.in/",
                    },
                    "url": "https://www.google.co.in/",
                    "visitStart": 1395257370036,
                  },
                  "id": "visit/1495257370036/0880990681",
                  "key": "visit/1495257370036/0880990681",
                  "value": Object {
                    "rev": "1-52d1ea2a7459c12398b596278859daf5",
                  },
                },
                Object {
                  "doc": Object {
                    "_id": "visit/1495257370036/0880990681",
                    "_rev": "1-52d1ea2a7459c12398b596278859daf5",
                    "page": Object {
                      "_attachments": Object {
                        "favIcon": Object {
                          "content_type": "image/x-icon",
                          "digest": "md5-80GKRD59hBCXxxTWnsS8uA==",
                          "length": 5430,
                          "revpos": 2,
                          "stub": true,
                        },
                      },
                      "_id": "page/1495257370804/5585936238",
                      "_rev": "2-be55358da9b50f754838c64f37791c8d",
                      "title": "https://www.google.co.in/",
                      "url": "https://www.google.co.in/",
                    },
                    "url": "https://www.google.co.in/",
                    "visitStart": 1395257370036,
                  },
                  "id": "visit/1495257370036/0880990681",
                  "key": "visit/1495257370036/0880990681",
                  "value": Object {
                    "rev": "1-52d1ea2a7459c12398b596278859daf5",
                  },
                },
              ],
            },
            "rows": Array [
              Object {
                "doc": Object {
                  "_id": "visit/1495257370036/0880990681",
                  "_rev": "1-52d1ea2a7459c12398b596278859daf5",
                  "page": Object {
                    "_attachments": Object {
                      "favIcon": Object {
                        "content_type": "image/x-icon",
                        "digest": "md5-80GKRD59hBCXxxTWnsS8uA==",
                        "length": 5430,
                        "revpos": 2,
                        "stub": true,
                      },
                    },
                    "_id": "page/1495257370804/5585936238",
                    "_rev": "2-be55358da9b50f754838c64f37791c8d",
                    "title": "https://www.google.co.in/",
                    "url": "https://www.google.co.in/",
                  },
                  "url": "https://www.google.co.in/",
                  "visitStart": 1395257370036,
                },
                "id": "visit/1495257370036/0880990681",
                "key": "visit/1495257370036/0880990681",
                "value": Object {
                  "rev": "1-52d1ea2a7459c12398b596278859daf5",
                },
              },
              Object {
                "doc": Object {
                  "_id": "visit/1495257370036/0880990681",
                  "_rev": "1-52d1ea2a7459c12398b596278859daf5",
                  "page": Object {
                    "_attachments": Object {
                      "favIcon": Object {
                        "content_type": "image/x-icon",
                        "digest": "md5-80GKRD59hBCXxxTWnsS8uA==",
                        "length": 5430,
                        "revpos": 2,
                        "stub": true,
                      },
                    },
                    "_id": "page/1495257370804/5585936238",
                    "_rev": "2-be55358da9b50f754838c64f37791c8d",
                    "title": "https://www.google.co.in/",
                    "url": "https://www.google.co.in/",
                  },
                  "url": "https://www.google.co.in/",
                  "visitStart": 1395257370036,
                },
                "id": "visit/1495257370036/0880990681",
                "key": "visit/1495257370036/0880990681",
                "value": Object {
                  "rev": "1-52d1ea2a7459c12398b596278859daf5",
                },
              },
              Object {
                "doc": Object {
                  "_id": "visit/1495257370036/0880990681",
                  "_rev": "1-52d1ea2a7459c12398b596278859daf5",
                  "page": Object {
                    "_attachments": Object {
                      "favIcon": Object {
                        "content_type": "image/x-icon",
                        "digest": "md5-80GKRD59hBCXxxTWnsS8uA==",
                        "length": 5430,
                        "revpos": 2,
                        "stub": true,
                      },
                    },
                    "_id": "page/1495257370804/5585936238",
                    "_rev": "2-be55358da9b50f754838c64f37791c8d",
                    "title": "https://www.google.co.in/",
                    "url": "https://www.google.co.in/",
                  },
                  "url": "https://www.google.co.in/",
                  "visitStart": 1395257370036,
                },
                "id": "visit/1495257370036/0880990681",
                "key": "visit/1495257370036/0880990681",
                "value": Object {
                  "rev": "1-52d1ea2a7459c12398b596278859daf5",
                },
              },
            ],
          }
    }
/>,
}
`;

exports[`ResultList snapshot tests should compare against the snapshot of no results 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <ul
    className="root"
>
    
</ul>,
  "nodes": Array [
    <ul
      className="root"
>
      
</ul>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <ResultList
        searchQuery=""
        searchResult={
                Object {
                        "rows": Array [],
                      }
        }
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "searchQuery": "",
          "searchResult": Object {
            "rows": Array [],
          },
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <ul
          className="root"
>
          
</ul>,
        "_debugID": 4,
        "_renderedOutput": <ul
          className="root"
>
          
</ul>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <ResultList
    searchQuery=""
    searchResult={
        Object {
            "rows": Array [],
          }
    }
/>,
}
`;
